Bug 1087320 - On charset reload set LOAD_FROM_CACHE only on the default channel, r=bz r=jduell